# progcurs

./: CMakeLists.txt  main.cpp
include/controller/: controller.hpp
include/freetype/: FontLoader.hpp  FreeTypeLib.hpp
include/model/: Font.hpp  Glyph.hpp  TextModel.hpp
include/view/: TextRenderer.hpp
src/controller/: controller.cpp
src/freetype/: FontLoader.cpp  FreeTypeLib.cpp
src/model/: Font.cpp  Glyph.cpp  TextModel.cpp
src/view/: TextRenderer.cpp
